# acow_c_goodies

./: .gitignore  CMakeLists.txt
acow/: c_goodies.h  stdlib.h
acow/include/: assert.h  compiler_macros.h  cpp_support.h  debugger.h  deprecated.h  macros.h  memory.h  numeric_types.h  pointers.h  processor_macros.h  stdlib.h  string.h  unsorted_yet.h  version.h
acow/include/Assert/: assert.h
acow/include/Assert/private/: assert.h
acow/include/Bitwise/: bitwise_utils.h
acow/include/Bitwise/private/: bitwise_utils.h
acow/include/Code/: deprecated.h  fake_keywords.h  macros.h
acow/include/Debug/: debugger.h  not_implemented.h  only_in_debug.h
acow/include/Debug/private/: debugger.h
acow/include/Discovery/: cpp_support.h  os_macros.h  processor_macros.h
acow/include/File/: file.h
acow/include/Memory/: memory.h
acow/include/Pointers/: pointers.h
acow/include/String/: string.h
acow/include/Types/: numeric_types.h  time_types.h
acow/include/private/: bitwise_utils.h  debugger.h
acow/include/std/: stdlib.h
acow/src/: debugger.c  memory.c  stdlib.c  string.c
acow/src/Assert/private/: assert.c
acow/src/Bitwise/private/: bitwise_utils.c
acow/src/Debug/private/: debugger.c
acow/src/Memory/: memory.c
acow/src/String/: string.c
acow/src/private/: bitwise_utils.c
acow/src/std/: stdlib.c
